Fix blurry canvases.

--- a/src/SampleRecord.module.scss
+++ b/src/SampleRecord.module.scss
@@ -20,5 +20,6 @@
     right: 0;
     width: 100%;
     height: 100%;
+    image-rendering: pixelated;
   }
 }
